# vspec-vsm

./: .gitignore  .readthedocs.yaml  authors.txt  environment-rtd.yml  environment.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-to-pypi.yml  python-package-conda.yml
docs/: readme.rst
docs/source/: api.rst  conf.py  index.rst  intro.rst  refs.bib
examples/: README.rst  plot_effect_facula_depth.py  plot_explore_grids.py  plot_flare_frequency.py  plot_spot_generator.py  plot_spot_growth.py  plot_star_surface.py
profile/: prof_faculae.py  readme.rst
test/: test_coordinategrid.py  test_faculae.py  test_granules.py  test_helpers.py  test_spots.py  test_star.py
vspec_vsm/: __init__.py  config.py  coordinate_grid.py  faculae.py  flares.py  granules.py  helpers.py  spots.py  star.py
