[project]
name = "vspec-vsm"
authors = [
    {name = "Ted Johnson", email = "ted.johnson@unlv.edu"},
]
description = "The VSPEC Variable Star Model as a standalone package."
readme = "docs/readme.rst"
repository = "https://github.com/VSPEC-collab/vspec-vsm"

version = "0.1"
requires-python = ">=3.8"
license = {text = "MIT"}

