[tool.poetry]
name = "vspec-vsm"
version = "0"
description = "The VSPEC Variable Star Model as a standalone package."
authors = [
    "Ted Johnson <ted.johnson@unlv.edu>",
    "Cameron Kelahan <cameron.kelahan@gmail.com>"
]
maintainers = [
    "Ted Johnson <ted.johnson@unlv.edu>"
]
license = "MIT"
readme = "docs/readme.rst"
homepage = "https://vspec-vsm.readthedocs.io/en/latest/index.html#"
repository = "https://github.com/VSPEC-collab/vspec-vsm"
documentation = "https://vspec-vsm.readthedocs.io/en/latest/api.html"
keywords = ["astronomy", "exoplanet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.9"
astropy = ">=5.1.1"
numpy
jax
jaxlib
tinygp

[tool.poetry.group.dev.dependencies]
pytest

[tool.poetry.group.docs.dependencies]
furo
numpydoc
sphinx
sphinx-automodapi
sphinx-gallery
sphinxcontrib-bibtex

[tool.poetry.group.plot.dependencies]
matplotlib
cartopy

[tool.poetry-version-plugin]
source = "init"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
